# manda-old

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Optimizations.md  README.md  dune-project
assembly/: Hello.asm  Try.asm
cmake/: FindReadline.cmake
compiler/: CMakeLists.txt  README.md
compiler/src/analysis/: CfgNode.cpp  CfgNode.h  CfgStatement.cpp  CfgStatement.h  MandaAnalyzer.cpp  MandaAnalyzer.h  MandaBinaryObject.cpp  MandaBinaryObject.h  MandaBoolType.cpp  MandaBoolType.h  MandaCoreTypes.cpp  MandaCoreTypes.h  MandaError.cpp  MandaError.h  MandaFunction.cpp  MandaFunction.h  MandaFunctionParameter.cpp  MandaFunctionParameter.h  MandaIntegerType.cpp  MandaIntegerType.h  MandaObject.cpp  MandaObject.h  MandaObjectOrType.cpp  MandaObjectOrType.h  MandaType.cpp  MandaType.h  SourceSpan.cpp  SourceSpan.h  SymbolTable.cpp  SymbolTable.h  analysis.h
compiler/src/cfg/: CfgNode.cpp  CfgStatement.h  CfgValueStatement.cpp  CfgValueStatement.h  cfg.h
compiler/src/entrypoint/: main.cpp
compiler/src/interpreter/: JITInterpreter.cpp  JITInterpreter.h
compiler/src/parser/: Manda.g4  Manda.tokens  MandaBaseVisitor.cpp  MandaBaseVisitor.h  MandaLexer.cpp  MandaLexer.h  MandaLexer.tokens  MandaParser.cpp  MandaParser.h  MandaVisitor.cpp  MandaVisitor.h  parser.h
doc/: SEMANTICS.md
docs/: MACHINE.md  OPCODES.md  SYSCALLS.md
example/: Class.mnd  Curl.mnd  Dictionary.mnd  Enum.mnd  Ffi.c  Ffi.cc  Ffi.mnd  Fiber.mnd  Functions.mnd  Future.mnd  Inheritance.mnd  Json.mnd  Loop.mnd  Nullable.mnd  Object.mnd  Operator.mnd  Redis.mnd  Regex.mnd  Socket.mnd  Stream.mnd  Typecast.mnd  Variables.mnd  c_interop.mn  class.mn  flow.mn  hello.mn
example_old/: Bank.mnd  Class.mnd  Math.mnd  String.mnd  (+1 more)
manda/: CMakeLists.txt
manda/example/: class.asm
manda/include/manda/bytecode/: AddInstruction.hpp  AndInstruction.hpp  BytecodeVisitor.hpp  CallInstruction.hpp  CodeSection.hpp  DataSection.hpp  DivInstruction.hpp  DivRemainderInstruction.hpp  Instruction.hpp  JmpInstruction.hpp  Kernel.hpp  LIInstruction.hpp  Label.hpp  MovInstruction.hpp  MulInstruction.hpp  Node.hpp  OrInstruction.hpp  PanicInstruction.hpp  PopErrorInstruction.hpp  PushErrorInstruction.hpp  RetInstruction.hpp  Section.hpp  SignedInstruction.hpp  SubInstruction.hpp  SyscallInstruction.hpp  UnsignedInstruction.hpp  XorInstruction.hpp  bytecode.hpp
manda/include/manda/runtime/: Thread.hpp  VirtualMachine.hpp  runtime.hpp
manda/src/bytecode/: AddInstruction.cpp  AndInstruction.cpp  BytecodeVisitor.cpp  CallInstruction.cpp  CodeSection.cpp  DataSection.cpp  DivInstruction.cpp  DivRemainderInstruction.cpp  JmpInstruction.cpp  Kernel.cpp  LIInstruction.cpp  Label.cpp  MovInstruction.cpp  MulInstruction.cpp  OrInstruction.cpp  PanicInstruction.cpp  PopErrorInstruction.cpp  PushErrorInstruction.cpp  RetInstruction.cpp  SignedInstruction.cpp  SubInstruction.cpp  SyscallInstruction.cpp  UnsignedInstruction.cpp  XorInstruction.cpp
manda/src/runtime/: Thread.cpp  VirtualMachine.cpp
manda/testcases/: basic.t2b
mandac/src/: CMakeLists.txt  lexer.l  main.cpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp
src/: CMakeLists.txt  MandaLexer.g4  MandaLexer.tokens  MandaParser.g4  ast.ml  dune  lexer.cpp  lexer.h  lexer.mll  manda_lexer.l  manda_linked_list.c  manda_parser.y  manda_src.h  parser.cpp  parser.h  parser.mly  runtime.ml  scanner.l  src.h  token.cpp  token.h
src/analysis/: Analyzer.cpp  Analyzer.h  AssignmentInstruction.cpp  AssignmentInstruction.h  BaseFunctionType.cpp  BaseFunctionType.h  Block.cpp  Block.h  Call.cpp  Call.h  Expression.cpp  Expression.h  Function.cpp  Function.h  Instruction.cpp  Instruction.h  Module.cpp  Module.h  NumType.cpp  NumType.h  Object.cpp  Object.h  ObjectInstruction.cpp  ObjectInstruction.h  Program.cpp  Program.h  Reference.cpp  Reference.h  Type.cpp  Type.h  TypeObject.cpp  TypeObject.h  analysis.h
src/ast/: ast_node.cc  ast_node.h  source_location.cc  source_location.h  source_span.cc  source_span.h  token.cc  token.h  token_type.h
src/entrypoint/: entrypoint.h  main.c  main.cc  print_help.c  report_fatal_error.c
src/manda_text/: Manda.g4  MandaBaseVisitor.cpp  MandaBaseVisitor.h  MandaLexer.cpp  MandaLexer.h  MandaLexer.tokens  MandaParser.cpp  MandaParser.h  MandaVisitor.cpp  MandaVisitor.h  manda_text.h
src/parsing/: lexer.cc  lexer.h  manda_lexer.l  manda_parser.y  parsing.cpp  parsing.h  string_scanner.cc  string_scanner.h  test_it.cpp  token.cc  token.h
src/parsing_old/: lexer.h  string_scanner.h
src/runtime/: Fiber.cpp  Fiber.h  Function.h  Interpreter.cpp  Interpreter.h  InterpreterCallbacks.cpp  Object.cpp  Object.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  TaggedPointer.cpp  TaggedPointer.h  Type.h  VM.cpp  VM.h  main.c  manda_run.c  nanbox.h  print_help.c  runtime.h
src/text/: ArgumentListNode.cpp  ArgumentListNode.h  ArgumentNode.cpp  ArgumentNode.h  ArrowFunctionBodyNode.cpp  ArrowFunctionBodyNode.h  AstNode.cpp  AstNode.h  BinaryExpressionNode.cpp  BinaryExpressionNode.h  BinaryExpressionParselet.cpp  BinaryExpressionParselet.h  CallExpressionNode.cpp  CallExpressionNode.h  CallExpressionParselet.cpp  CallExpressionParselet.h  CompilationUnitNode.cpp  CompilationUnitNode.h  DecimalLiteralNode.cpp  DecimalLiteralNode.h  Error.h  ExpressionNode.cpp  ExpressionNode.h  ExpressionStatementNode.cpp  ExpressionStatementNode.h  FunctionBodyNode.cpp  FunctionBodyNode.h  FunctionDeclarationStatementNode.cpp  FunctionDeclarationStatementNode.h  FunctionSignatureNode.cpp  FunctionSignatureNode.h  InfixParselet.cpp  InfixParselet.h  Lexer.cpp  Lexer.h  NumberLiteralNode.cpp  NumberLiteralNode.h  ParameterListNode.cpp  ParameterListNode.h  ParameterNode.cpp  (+26 more)
src/vm/: Fiber.cpp  Fiber.h  Function.cpp  Interpreter.cpp  Interpreter.h  Memory.cpp  Memory.h  Number.cpp  Number.h  Object.cpp  Object.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  Type.cpp  VM.cpp  VM.h
test/: CMakeLists.txt  TaggedPointer.cpp
test/testcases/: BinaryLiteral.mnd  FloatLiteral.mnd  FunctionDeclaration.mnd  OctalLiteral.mnd
(+37 files in other folders)
